Update sonar-project.properties with placeholders
Added placeholders for project key and organization.

--- a/.github/workflows/sonar-project.properties
+++ b/.github/workflows/sonar-project.properties
@@ -1,6 +1,10 @@
 sonar.projectKey=Arthzin5567_TCC_ETB
 sonar.organization=arthzin5567
 
+sonar.projectKey=<sonar-project-key>
+sonar.organization=<sonar-organization>
+
+sonar.php.coverage.reportPaths=coverage.xml
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=TCC_ETB
